--- a/src/components/SaleSection.css
+++ b/src/components/SaleSection.css
@@ -14,9 +14,10 @@
 }
 
 .sale-container {
-  background-color: #00000040;
-  backdrop-filter: blur(3px);
+  background-color: #4545453f;
+  backdrop-filter: blur(4px);
   border-radius: 20px;
+  border: 1px solid #00000031;
   padding: 40px;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.45);
   max-width: 600px;
@@ -90,19 +91,44 @@
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease;
-  color: #000000;
-  border: none;
+  background-color: #c4b6ea;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.7);
+  border: 1px solid #00000031;
   border-radius: 8px;
   margin-left: 10px;
   outline: none;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+}
+
+.max-button:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    -120deg,
+    transparent,
+    rgba(255, 255, 255, 0.3),
+    transparent
+  );
+  transition: all 0.6s;
+}
+
+.max-button:hover:before {
+  right: 100%;
 }
 
 .max-button:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transform: translateY(-3px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.max-button:active {
+  transform: translateY(1px);
 }
 
 .progress-bar-container {
@@ -153,9 +179,10 @@
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease;
-  color: white;
-  border: none;
-  border-radius: 50px;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.7);
+  border: 1px solid #00000031;
+  border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   outline: none;
   position: relative;
@@ -163,8 +190,13 @@
 }
 
 .buy-button:not(:disabled):hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+  transform: translateY(-3px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.buy-button:not(:disabled):active {
+  transform: translateY(1px);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .buy-button:disabled {
@@ -173,30 +205,29 @@
 }
 
 .buy-button-success {
-  background-color: #4CAF50;
+  background-color: #58cb5c;
 }
 
 .buy-button-normal {
-  background-color: #6c87e7;
+  background-color: #c4b6ea;
 }
 
-.buy-button-hover {
-  background-color: #5a73d8;
-}
-
-.buy-button-ripple {
+.buy-button:before {
+  content: '';
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 0;
-  height: 0;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 50%;
-  transition: all 0.5s ease;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    rgba(255, 255, 255, 0.4),
+    transparent
+  );
+  transition: all 0.6s;
 }
 
-.buy-button:hover .buy-button-ripple {
-  width: 300px;
-  height: 300px;
+.buy-button:hover:before {
+  left: 100%;
 }
